# datacleaner

./: .gitignore  README.md  demo.py  pyproject.toml
examples/: demo.ipynb
src/datacleaner/: __init__.py  analysis.py  column_selection.py  core.py  correlation_reduction.py  datatypes.py  duplicates.py  missing_values.py  outliers.py  reporting.py  skewness.py  target_handling.py  text_standardization.py
tests/: full_stress_test.py  test_edge_cases.py  test_real_data.py  test_sklearn_datasets.py  tmp_messy_realworld.csv  validate_50_datasets.py  validation_50_results.json
